<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue">


    <TextView
        android:layout_width="@dimen/med_length"
        android:layout_height="@dimen/small_length"
        android:layout_marginBottom="10dp"
        android:background="@color/red"
        android:gravity="center"
        android:text="@string/contrast"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/button"
        app:layout_constraintLeft_toRightOf="@id/gl_v1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="@dimen/large_length"
        android:layout_height="@dimen/small_length"
        android:layout_marginTop="10dp"
        android:background="@color/red"
        android:text="@string/button"
        app:layout_constraintBottom_toTopOf="@id/view1"
        app:layout_constraintLeft_toRightOf="@id/gl_v1"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view1"
        android:layout_width="@dimen/small_length"
        android:layout_height="@dimen/small_length"
        android:background="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/gl_v1"
        app:layout_constraintRight_toLeftOf="@id/right_hline"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view2"
        android:layout_width="@dimen/small_length"
        android:layout_height="@dimen/small_length"
        android:background="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/gl_v1"
        app:layout_constraintRight_toLeftOf="@id/right_hline" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="@dimen/med_length"
        android:layout_height="@dimen/small_length"
        android:layout_marginBottom="@dimen/large_length"
        android:background="@color/black"
        android:onClick="layout4"
        android:text="@string/layout3"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_v1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_hline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

</androidx.constraintlayout.widget.ConstraintLayout>